plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'
}

version = "${project.mod_version}"
group = "xyz.mashtoolz"

base {
	archivesName = archives_base_name
}

repositories {
	maven { url "https://maven.shedaniel.me/" }
	maven { url = "https://api.modrinth.com/maven" }
	maven { url "https://maven.terraformersmc.com/releases/" }
	maven { url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }
}

dependencies {
	
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
	modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
	modApi "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
	implementation 'io.netty:netty-all:4.1.106.Final'
	
	modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.2.0+")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}
}